--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -588,20 +588,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdE-CP-22q">
-                                <rect key="frame" x="10" y="216.66666666666666" width="394" height="26.666666666666657"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="  Subcategories">
-                                        <attributes>
-                                            <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="24" name=".SFNS-Regular"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nig-Wl-rKw">
                                 <rect key="frame" x="10" y="161.66666666666666" width="394" height="35"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -616,8 +602,8 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gm8-nq-kQb">
-                                <rect key="frame" x="10" y="248.33333333333331" width="394" height="564.66666666666674"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gm8-nq-kQb">
+                                <rect key="frame" x="10" y="206.66666666666669" width="394" height="606.33333333333326"/>
                                 <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -727,18 +713,16 @@
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="Gm8-nq-kQb" secondAttribute="trailing" constant="10" id="6aL-2q-rvd"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="top" secondItem="Avc-l0-GQU" secondAttribute="top" constant="10" id="8zh-Lu-fOK"/>
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="cd3-kA-RHI" secondAttribute="trailing" id="DYV-gu-Abs"/>
-                            <constraint firstItem="Gm8-nq-kQb" firstAttribute="top" secondItem="qdE-CP-22q" secondAttribute="bottom" constant="5" id="FOO-6e-BZZ"/>
+                            <constraint firstItem="Gm8-nq-kQb" firstAttribute="top" secondItem="Nig-Wl-rKw" secondAttribute="bottom" constant="10" id="FOO-6e-BZZ"/>
                             <constraint firstItem="Vef-0J-N2F" firstAttribute="bottom" secondItem="Avc-l0-GQU" secondAttribute="bottom" id="HAF-Si-cUI"/>
                             <constraint firstItem="cd3-kA-RHI" firstAttribute="top" secondItem="VyQ-id-LOf" secondAttribute="bottom" id="JgJ-Od-bo2"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="height" secondItem="qNC-4y-a2E" secondAttribute="height" multiplier="0.06" id="KhQ-X9-ALK"/>
-                            <constraint firstItem="qdE-CP-22q" firstAttribute="top" secondItem="Nig-Wl-rKw" secondAttribute="bottom" constant="20" id="MWB-61-RPe"/>
+                            <constraint firstItem="Gm8-nq-kQb" firstAttribute="top" secondItem="Nig-Wl-rKw" secondAttribute="bottom" constant="10" id="MWB-61-RPe"/>
                             <constraint firstItem="Nig-Wl-rKw" firstAttribute="leading" secondItem="Avc-l0-GQU" secondAttribute="leading" constant="10" id="T8D-jC-fri"/>
                             <constraint firstItem="Nig-Wl-rKw" firstAttribute="top" secondItem="VyQ-id-LOf" secondAttribute="bottom" constant="10" id="TSn-Be-Hgo"/>
-                            <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="qdE-CP-22q" secondAttribute="trailing" constant="10" id="VKF-c7-2RU"/>
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="VyQ-id-LOf" secondAttribute="trailing" constant="10" id="WvE-eJ-rOX"/>
                             <constraint firstItem="cd3-kA-RHI" firstAttribute="leading" secondItem="Avc-l0-GQU" secondAttribute="leading" id="Wvz-7x-Z6W"/>
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="bottom" secondItem="Gm8-nq-kQb" secondAttribute="bottom" id="fmO-kr-Kbr"/>
-                            <constraint firstItem="qdE-CP-22q" firstAttribute="leading" secondItem="Avc-l0-GQU" secondAttribute="leading" constant="10" id="gOO-h7-N09"/>
                             <constraint firstItem="Vef-0J-N2F" firstAttribute="trailing" secondItem="Gm8-nq-kQb" secondAttribute="trailing" id="lPA-Ce-X6W"/>
                             <constraint firstItem="Gm8-nq-kQb" firstAttribute="leading" secondItem="Avc-l0-GQU" secondAttribute="leading" constant="10" id="nVA-m5-s0M"/>
                             <constraint firstItem="Vef-0J-N2F" firstAttribute="top" secondItem="VyQ-id-LOf" secondAttribute="top" constant="10" id="tCq-xj-2qQ"/>
